# FuncMinimization

./: CMakeLists.txt  CMakePresets.json  Doxyfile
Header/: Area.h  Function.h  OptimizationMethod.h  StopCriteria.h  TransferData.h  vectorX.h
Source/: Area.cpp  Function.cpp  Main.cpp  OptimizationMethod.cpp  StopCriteria.cpp  TransferData.cpp  vectorX.cpp
html/: _area_8h_source.html  _function_8h_source.html  _optimization_method_8h_source.html  _stop_criteria_8h_source.html  _transfer_data_8h_source.html  annotated.html  class_adam_gradient_descent-members.html  class_adam_gradient_descent.html  class_area-members.html  class_area.html  class_classic_gradient_descent-members.html  class_classic_gradient_descent.html  class_difference_norm_stop_criteria-members.html  class_difference_norm_stop_criteria.html  class_func_difference_norm_stop_criteria-members.html  class_func_difference_norm_stop_criteria.html  class_function-members.html  class_function.html  class_function1-members.html  class_function1.html  class_function2-members.html  class_function2.html  class_function3-members.html  class_function3.html  class_function4-members.html  class_function4.html  class_function5-members.html  class_function5.html  class_function6-members.html  class_function6.html  class_grad_norm_stop_criteria-members.html  class_grad_norm_stop_criteria.html  class_invalid_input_exception-members.html  class_invalid_input_exception.html  class_neighborhood-members.html  class_neighborhood.html  class_optimization_method-members.html  class_optimization_method.html  (+33 more)
(+34 files in other folders)
